force-app/main/default/objects/CB_Settings__c/CB_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CB_Settings</label>
</CustomObject>