force-app/main/default/objects/CB_Settings__c/fields/ChargeBee_URL__c.field-meta.xml
<CustomField>
    <fullName>ChargeBee_URL__c</fullName>
    <label>ChargeBee_URL</label>
    <type>Url</type>
</CustomField>