force-app/main/default/objects/CB_Settings__c/fields/Settings_JSON__c.field-meta.xml
<CustomField>
    <fullName>Settings_JSON__c</fullName>
    <label>Settings_JSON</label>
    <type>TextArea</type>
</CustomField>