force-app/main/default/objects/CB_Settings__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>